# InstaBrute

./: CMakeLists.txt  Makefile
src/: main.cpp
src/BruteForce/: BruteForce.h
src/Log/: Log.h
src/browser/: browser.h
